tests/apigateway/apigatewayconfig/01-general-policy.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# AC-1: general-policy CR with defaults.endpointType="REGIONAL", defaults.apiKeySource="HEADER",
#         defaults.namingTemplate="{namespace}-{name}"; label aws.kropath.run/resource-name present.
---
apiVersion: aws.kropath.run/v1alpha1
kind: APIGatewayConfig
metadata:
  name: general-policy
  namespace: apigatewayconfig
  labels:
    aws.kropath.run/resource-name: general-policy
spec:
  mandatory:
    endpointType: ""
    apiKeySource: ""
    minimumTlsVersion: ""
    disableExecuteApiEndpoint: false
    namingTemplate: ""
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
  defaults:
    endpointType: "REGIONAL"
    apiKeySource: "HEADER"
    minimumTlsVersion: ""
    disableExecuteApiEndpoint: false
    namingTemplate: "{namespace}-{name}"
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
